Removed all bullshit from throw